--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "DS-Digital", 'Courier New', Courier, monospace;
+  background-color: rgb(10, 10, 10);
 }
 
 main {
